--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.51.3",
     "@trpc/client": "11.0.0-rc.465",
+    "@trpc/react-query": "11.0.0-rc.465",
     "@trpc/server": "11.0.0-rc.465",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
