--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.1",
+    "@aws-sdk/client-s3": "^3.614.0",
+    "@aws-sdk/s3-request-presigner": "^3.614.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.3",
     "@trpc/client": "11.0.0-rc.465",
     "@trpc/react-query": "11.0.0-rc.465",
     "@trpc/server": "11.0.0-rc.465",
+    "@uppy/aws-s3": "^4.0.0",
+    "@uppy/core": "^4.0.1",
+    "@uppy/react": "^4.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.32.0",
