--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@aws-sdk/s3-request-presigner": "^3.614.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.3",
     "@trpc/client": "11.0.0-rc.465",
     "@trpc/react-query": "11.0.0-rc.465",
     "@trpc/server": "11.0.0-rc.465",
     "@uppy/aws-s3": "^4.0.0",
     "@uppy/core": "^4.0.1",
-    "@uppy/react": "^4.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.32.0",
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-sync-external-store": "^1.2.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/use-sync-external-store": "^0.0.6",
     "drizzle-kit": "^0.23.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
