--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.19",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "^1.2.2",
