--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@uppy/core": "^4.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "copy-to-clipboard": "^3.3.3",
     "drizzle-orm": "^0.32.0",
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.408.0",
