--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.614.0",
     "@aws-sdk/s3-request-presigner": "^3.614.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -28,6 +29,7 @@
     "copy-to-clipboard": "^3.3.3",
     "drizzle-orm": "^0.32.0",
     "drizzle-zod": "^0.5.1",
+    "framer-motion": "^11.3.19",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.19",
